--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -71,3 +71,84 @@
 ![enter description here](./images/TIM截图20190413232121.png)
 
 ![enter description here](./images/TIM截图20190413232333.png)
+
+## 计算机网络体系结构
+ 
+
+#  应用层
+
+## 网络应用的体系结构
+
+
+![enter description here](./images/TIM截图20190415101217.png)
+
+### 客户机/服务器
+
+![enter description here](./images/TIM截图20190415101437.png)
+
+![enter description here](./images/TIM截图20190415101530.png)
+
+### P2P
+
+![enter description here](./images/TIM截图20190415101811.png)
+
+![enter description here](./images/TIM截图20190415101945.png)
+
+## 网络应用进程通信
+
+![enter description here](./images/TIM截图20190415102241.png)
+
+Answer: 有
+
+![enter description here](./images/TIM截图20190415102522.png)
+
+![enter description here](./images/TIM截图20190415102725.png)
+
+## 应用层协议
+
+![enter description here](./images/TIM截图20190415103112.png)
+
+![enter description here](./images/TIM截图20190415103242.png)
+
+## 网络应用需求
+
+![enter description here](./images/TIM截图20190415103700.png)
+
+![enter description here](./images/TIM截图20190415103818.png)
+
+## Internet提供的传输服务
+
+![enter description here](./images/TIM截图20190415103955.png)
+
+![enter description here](./images/TIM截图20190415104252.png)
+
+## WEB应用概述
+
+ ![enter description here](./images/TIM截图20190415104753.png)
+ 
+ ![enter description here](./images/TIM截图20190415105024.png)
+ 
+ ![enter description here](./images/TIM截图20190415105252.png)
+ 
+
+## HTTP连接类型
+
+![enter description here](./images/TIM截图20190415105456.png)
+
+![enter description here](./images/TIM截图20190415105756.png)
+
+![enter description here](./images/TIM截图20190415105919.png)
+
+![enter description here](./images/TIM截图20190415110106.png)
+
+![enter description here](./images/TIM截图20190415110443.png)
+
+## HTTP消息格式
+
+ ![enter description here](./images/TIM截图20190415111117.png)
+ 
+ ![enter description here](./images/TIM截图20190415111337.png)
+ 
+ ![enter description here](./images/TIM截图20190415111457.png)
+ 
+ ![enter description here](./images/TIM截图20190415111618.png)
