--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -5,72 +5,72 @@
 ##  什么是计算机网络
 
 
-![enter description here](./images/TIM截图20190413154648.png)
+![enter description here](./images/1555298697755.png)
 
-![enter description here](./images/TIM截图20190413155035.png)
+![enter description here](./images/1555298698011.png)
 
-![enter description here](./images/TIM截图20190413155200.png)
+![enter description here](./images/1555298697748.png)
 
-![enter description here](./images/TIM截图20190413155530.png)
+![enter description here](./images/1555298699650.png)
 
-![enter description here](./images/TIM截图20190413155745.png)
+![enter description here](./images/1555298699440.png)
 
 
 ## 什么是网络协议
 
 
-![enter description here](./images/TIM截图20190413160059.png)
-![enter description here](./images/TIM截图20190413160336.png)
-![enter description here](./images/TIM截图20190413160642.png)
+![enter description here](./images/1555298700939.png)
+![enter description here](./images/1555298698761.png)
+![enter description here](./images/1555298698015.png)
 
 ## 计算机网络结构
 
-![enter description here](./images/TIM截图20190413161007.png)
-![enter description here](./images/TIM截图20190413162137.png)
-![enter description here](./images/TIM截图20190413163933.png)
-![enter description here](./images/TIM截图20190413164255.png)
-![enter description here](./images/TIM截图20190413164557.png)
-![enter description here](./images/TIM截图20190413164723.png)
-![enter description here](./images/TIM截图20190413164825.png)
-![enter description here](./images/TIM截图20190413164958.png)
-![enter description here](./images/TIM截图20190413165600.png)
+![enter description here](./images/1555298699637.png)
+![enter description here](./images/1555298699751.png)
+![enter description here](./images/1555298699079.png)
+![enter description here](./images/1555298699642.png)
+![enter description here](./images/1555298700075.png)
+![enter description here](./images/1555298698016.png)
+![enter description here](./images/1555298699083.png)
+![enter description here](./images/1555298699083_1.png)
+![enter description here](./images/1555298699440_1.png)
 
 ## Internet结构
 
 ## 电路交换
 
-![enter description here](./images/TIM截图20190413171935.png)
+![enter description here](./images/1555298698017.png)
 
 ## 多路复用
 
-![enter description here](./images/TIM截图20190413172316.png)
-![enter description here](./images/TIM截图20190413172546.png)
-![enter description here](./images/TIM截图20190413172803.png)
-![enter description here](./images/TIM截图20190413172950.png)
-![enter description here](./images/TIM截图20190413173020.png)
+![enter description here](./images/1555298697751.png)
+![enter description here](./images/1555298699649.png)
+![enter description here](./images/1555298700412.png)
+![enter description here](./images/1555298700939_1.png)
+![enter description here](./images/1555298699442.png)
 
 ## 报文交换和分组交换
 
-![enter description here](./images/TIM截图20190413223425.png)
-![enter description here](./images/TIM截图20190413224024.png)
-![enter description here](./images/TIM截图20190413225835.png)
+![enter description here](./images/1555298700015.png)
+![enter description here](./images/1555298700603.png)
+![enter description here](./images/1555298700940.png)
 
 ## 计算机网络性能
-![enter description here](./images/TIM截图20190413230854.png)
+![enter description here](./images/1555298699443.png)
 
-![enter description here](./images/TIM截图20190413231041.png)
+![enter description here](./images/1555298700073.png)
 
-![enter description here](./images/TIM截图20190413231248.png)
+![enter description here](./images/1555298700076.png)
 
-![enter description here](./images/TIM截图20190413231414.png)
+![enter description here](./images/1555298700228.png)
 
-![enter description here](./images/TIM截图20190413231548.png)
+![enter description here](./images/1555298700231.png)
 
-![enter description here](./images/TIM截图20190413231955.png)
+![enter description here](./images/1555298700249.png)
 
-![enter description here](./images/TIM截图20190413232121.png)
+![enter description here](./images/1555298700250.png)
 
-![enter description here](./images/TIM截图20190413232333.png)
+![enter description here](./images/1555298700250_1.png)
 
 ## 计算机网络体系结构
  
@@ -80,75 +80,76 @@
 ## 网络应用的体系结构
 
 
-![enter description here](./images/TIM截图20190415101217.png)
+![enter description here](./images/1555298700280.png)
 
 ### 客户机/服务器
 
-![enter description here](./images/TIM截图20190415101437.png)
+![enter description here](./images/1555298700482.png)
 
-![enter description here](./images/TIM截图20190415101530.png)
+![enter description here](./images/1555298700385.png)
 
 ### P2P
 
-![enter description here](./images/TIM截图20190415101811.png)
+![enter description here](./images/1555298700921.png)
 
-![enter description here](./images/TIM截图20190415101945.png)
+![enter description here](./images/1555298700450.png)
 
 ## 网络应用进程通信
 
-![enter description here](./images/TIM截图20190415102241.png)
+![enter description here](./images/1555298700922.png)
 
 Answer: 有
 
-![enter description here](./images/TIM截图20190415102522.png)
+![enter description here](./images/1555298701717.png)
 
-![enter description here](./images/TIM截图20190415102725.png)
+![enter description here](./images/1555298700936.png)
 
 ## 应用层协议
 
-![enter description here](./images/TIM截图20190415103112.png)
+![enter description here](./images/1555298701003.png)
 
-![enter description here](./images/TIM截图20190415103242.png)
+![enter description here](./images/1555298701713.png)
 
 ## 网络应用需求
 
-![enter description here](./images/TIM截图20190415103700.png)
+![enter description here](./images/1555298701714.png)
 
-![enter description here](./images/TIM截图20190415103818.png)
+![enter description here](./images/1555298700956.png)
 
 ## Internet提供的传输服务
 
-![enter description here](./images/TIM截图20190415103955.png)
+![enter description here](./images/1555298701004.png)
 
-![enter description here](./images/TIM截图20190415104252.png)
+![enter description here](./images/1555298700976.png)
 
 ## WEB应用概述
 
- ![enter description here](./images/TIM截图20190415104753.png)
+ ![enter description here](./images/1555298701046.png)
  
- ![enter description here](./images/TIM截图20190415105024.png)
+ ![enter description here](./images/1555298701046_1.png)
  
- ![enter description here](./images/TIM截图20190415105252.png)
+ ![enter description here](./images/1555298701047.png)
  
 
 ## HTTP连接类型
 
-![enter description here](./images/TIM截图20190415105456.png)
+![enter description here](./images/1555298701004_1.png)
 
-![enter description here](./images/TIM截图20190415105756.png)
+![enter description here](./images/1555298701092.png)
 
-![enter description here](./images/TIM截图20190415105919.png)
+![enter description here](./images/1555298701091.png)
 
-![enter description here](./images/TIM截图20190415110106.png)
 
-![enter description here](./images/TIM截图20190415110443.png)
+![enter description here](./images/1555298701094.png)
+
+![enter description here](./images/1555298701288.png)
 
 ## HTTP消息格式
 
- ![enter description here](./images/TIM截图20190415111117.png)
+ ![enter description here](./images/1555298701094_1.png)
  
- ![enter description here](./images/TIM截图20190415111337.png)
+ ![enter description here](./images/1555298701094_2.png)
  
- ![enter description here](./images/TIM截图20190415111457.png)
+ ![enter description here](./images/1555298701108.png)
  
- ![enter description here](./images/TIM截图20190415111618.png)
+ 
