--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -96,7 +96,7 @@
 
 ## 网络应用进程通信
 
-![enter description here](/images/1555298700922.png)
+![enter description here](./images/1555298700922.png)
 
 Answer: 有
 
