--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -27,7 +27,7 @@
 ##  什么是计算机网络
 
 
-![enter description here](./images/1555298697755.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555298697755.png)
 
 ![enter description here](./images/1555298698011.png)
 
