--- a/java/字符集和字符编码.md
+++ b/java/字符集和字符编码.md
@@ -36,7 +36,7 @@
 # 3.3.UTF-8
 
 使用8bit为单位，对unicode进行编码，特点是：对不同范围的字符使用不同长度的编码；
-![enter description here](./images/TIM截图20190315184733.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401109480.png)
 
 4个字节以内，包含了unicode的所有的字符。
 
@@ -48,7 +48,7 @@
 # 3.4.UTF-16
 
 以2bytes为单位，等同于UCS-2
-![enter description here](./images/TIM截图20190315185816.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401109481.png)
 
 # 3.5.UTF-32
 
