--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -27,72 +27,72 @@
 ##  什么是计算机网络
 
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243525.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895388.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400245979.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895552.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400238373.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895385.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400242434.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895395.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400241777.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895650.png)
 
 
 ## 什么是网络协议
 
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400244889.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400239196.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400238957.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895682.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895851.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895849.png)
 
 ## 计算机网络结构
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400241806.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400242508.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400241077.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400242236.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243527.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400238959.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400241110.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400241112.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400241770.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896425.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896819.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401895854.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896461.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897927.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896533.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896429.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896690.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896678.png)
 
 ## Internet结构
 
 ## 电路交换
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400238960.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898306.png)
 
 ## 多路复用
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400238919.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400242395.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243540.png)
-![enter description here](./images/1555298700939_1.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243278.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896681.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897212.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897371.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896086.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898663.png)
 
 ## 报文交换和分组交换
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243555.png)
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400244465.png)
-![enter description here](./images/1555298700940.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897210.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898305.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896351.png)
 
 ## 计算机网络性能
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243538.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898243.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243541.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898766.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243542.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898254.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243557.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898661.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243597.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898702.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243600.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898704.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243604.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898712.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243619.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898703.png)
 
 ## 计算机网络体系结构
  
@@ -102,76 +102,78 @@
 ## 网络应用的体系结构
 
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400243624.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898847.png)
 
 ### 客户机/服务器
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400244610.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898738.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400244429.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401899125.png)
 
 ### P2P
 
-![enter description here](./images/1555298700921.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896817.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400244695.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898745.png)
 
 ## 网络应用进程通信
 
-![enter description here](./images/1555298700922.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401896879.png)
 
 Answer: 有
 
-![enter description here](./images/1555298701717.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897117.png)
 
-![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555400244888.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898796.png)
 
 ## 应用层协议
 
-![enter description here](./images/1555298701003.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897304.png)
 
-![enter description here](./images/1555298701713.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897800.png)
 
 ## 网络应用需求
 
-![enter description here](./images/1555298701714.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898256.png)
 
-![enter description here](./images/1555298700956.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897795.png)
 
 ## Internet提供的传输服务
 
-![enter description here](./images/1555298701004.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897955.png)
 
-![enter description here](./images/1555298700976.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401897947.png)
 
 ## WEB应用概述
 
- ![enter description here](./images/1555298701046.png)
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898427.png)
  
- ![enter description here](./images/1555298701046_1.png)
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898445.png)
  
- ![enter description here](./images/1555298701047.png)
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898446.png)
  
 
 ## HTTP连接类型
 
-![enter description here](./images/1555298701004_1.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898498.png)
 
-![enter description here](./images/1555298701092.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898546.png)
 
-![enter description here](./images/1555298701091.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898499.png)
 
 
-![enter description here](./images/1555298701094.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898590.png)
 
-![enter description here](./images/1555298701288.png)
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898672.png)
 
 ## HTTP消息格式
 
- ![enter description here](./images/1555298701094_1.png)
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898662.png)
  
- ![enter description here](./images/1555298701094_2.png)
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898671.png)
  
- ![enter description here](./images/1555298701108.png)
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898689.png)
  
- 
+
+## Cookie技术
+
