--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -104,11 +104,13 @@
 
 ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898847.png)
 
+
 ### 客户机/服务器
 
 ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401898738.png)
 
 ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555401899125.png)
+
 
 ### P2P
 
@@ -177,3 +179,99 @@ Answer: 有
 
 ## Cookie技术
 
+Q:为什么需要？
+
+A:http是无状态协议，但是很多应用需要服务器掌握客户端的状态
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555402371574.png)
+
+## web缓存/代理服务器技术
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555403189981.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555403464070.png)
+
+## Email应用与SMTP
+
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555403572942.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555403772977.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555403937588.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404012452.png)
+ 
+  ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404208466.png)
+  
+  ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404353538.png)
+  
+  ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404509520.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404704485.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404872854.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555404970459.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405093863.png)
+ 
+ ![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405152019.png)
+ 
+
+## DNS
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405439069.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405595101.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405726421.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405836492.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555405922566.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555406048397.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555406356506.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555406379871.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555406663747.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555406890154.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555406902223.png)
+
+**DNS同时使用TCP,UDP传输协议：**
+DNS区域传输的时候使用TCP协议；
+域名解析时使用UDP协议。
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555407253428.png)
+
+## P2P
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555407421618.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555407541989.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555407713352.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555407790235.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555407893179.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408076765.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408126647.png)
+
+## P2P应用：索引技术
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408533720.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408595161.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408797146.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408926187.png)
+
+![enter description here](https://www.github.com/2433574201/2433574201.github.io/raw/master/小书匠/1555408988187.png)
